crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-15.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/issue-988-repro.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:16:29
   |
13 |         run: |
   |         --- this run block
...
16 |             event_name="${{ github.event_name }}"
   |                             ^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:27:57
   |
25 |         run: |
   |         --- this run block
26 |           curl -X POST https://api.example.com -H "Content-type: application/json" \
27 |             -d "{\"text\":\"ドドド: https://github.com/${{ github.repository }}\"}"
   |                                                            ^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

2 findings: 2 unknown, 0 informational, 0 low, 0 medium, 0 high
